--- a/index.html
+++ b/index.html
@@ -3,247 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>Feed Yo Face</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
-<body>
-    <header>
-        <nav>
-        <div class="nav-wrapper">
-            <div class="container">
-                <a class="brand-logo left">Feed Yo Face <small>Sweet Food Baby App</small></a>
-                <ul class="right" id="nav-mobile">
-                    <li>
-                        <a class="waves-effect waves-light btn blue-grey darken-1" id="logOut"><i class="material-icons right">first_page</i>Log Out</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    </header>
-    <main class="container">
-        <div class="row">
-        <div class="col s12 pantryDiv">
-            <div class="card">
-                <div class="card-content">
-                    <h5>Add Pantry Items</h5>
-                    <form>
-                        <div class="row">
-                            <div class="input-field col s4">
-                                <input class="validate" id="form-ingredient" type="text"> <label for="form-ingredient">Ingredient</label>
-                            </div>
-                            <div class="input-field col s2">
-                                <input class="validate" id="form-quantity" type="text"> <label for="form-quantity">Quantity</label>
-                            </div>
-                            <div class="input-field col s3 unitDropdown">
-                                <select id="units">
-                                    <option class="form-unit" disabled selected value="">Choose Unit
-                                    </option>
-                                    <option class="form-unit" value="Teaspoon">Teaspoon
-                                    </option>
-                                    <option class="form-unit" value="Tablespoon">Tablespoon
-                                    </option>
-                                    <option class="form-unit" value="Fluid ounce">Fluid ounce
-                                    </option>
-                                    <option class="form-unit" value="Cup">Cup
-                                    </option>
-                                    <option class="form-unit" value="Pint">Pint
-                                    </option>
-                                    <option class="form-unit" value="Quart">Quart
-                                    </option>
-                                    <option class="form-unit" value="Gallon">Gallon
-                                    </option>
-                                    <option class="form-unit" value="Piece">Piece
-                                    </option>
-                                </select>
-                            </div>
-                            <div class="input-field col s3">
-                                <input class="waves-effect waves-light btn blue darken-1" id="form-addIngredient" type="submit" value="ADD TO PANTRY">
-                            </div>
-                        </div>
-                    </form>
-                    <h5>View Pantry Items</h5>
-                    <table class="bordered">
-                        <thead>
-                            <tr>
-                                <th>Ingredient</th>
-                                <th>Quantity</th>
-                                <th>Unit</th>
-                                <th><input id="check0" type="checkbox"><label for="check0"></label>Cook Wit Deez</th>
-                                <th></th>
-                                <th>Remove Item</th>
-                            </tr>
-                        </thead>
-                        <tbody id="pantry-list"></tbody>
-                    </table>
-                    <div class="row">
-                        <div class="col s4">
-                            <!--INLINE STYLING================================-->
-                            <br>
-                            <h5>Max Calories</h5><input class="calories" name="calories" type="number" value="2000">
-                        </div>
-                        <div class="browser-default col s4">
-                            <br>
-                            <h5>Course Type</h5><select aria-labelledby="form-unit" class="dropdown-menu courseDropdown">
-                                <option disabled selected value="">Choose Type
-                                </option>
-                                <option class="type" value="main+course">Main Course
-                                </option>
-                                <option class="type" value="side+dish">Side Dish
-                                </option>
-                                <option class="type" value="dessert">Dessert
-                                </option>
-                                <option class="type" value="appetizer">Appetizer
-                                </option>
-                                <option class="type" value="salad">Salad
-                                </option>
-                            </select>
-                        </div>
-                        <div class="browser-default col s4">
-                            <br>
-                            <h5>Diet</h5><select aria-labelledby="form-unit" class="dropdown-menu dietDropdown">
-                                <option disabled selected value="">Choose Diet
-                                </option>
-                                <option class="diet" value="pescetarian">Pescetarian
-                                </option>
-                                <option class="diet" value="lacto+vegetarian">Lacto Vegetarian
-                                </option>
-                                <option class="diet" value="ovo+vegetarian">Ovo Vegetarian
-                                </option>
-                                <option class="diet" value="vegan">Vegan
-                                </option>
-                                <option class="diet" value="paleo">Paleo
-                                </option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div style="text-align:center;">
-                            <!-- <a class="waves-effect waves-light btn blue-grey darken-1" id="addToBowl">Add to Mixing Bowl</a> -->
-                            <a class="waves-effect waves-light btn blue darken-1 searchButton disabled" id="select">Search For Recipes</a> <a class="waves-effect waves-light btn blue darken-1 modal-trigger searchButton disabled" href="#walmart-modal" id="findOnWalmart">Find on WalMart</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div><!-- <div class="col s12 l5 mixingBowlDiv">
-            <div class="card mixingBowl">
-                <div class="card-content white-text">
-                    <span class="card-title">Recipe Search</span>
-                    <form>
-                        <div class ="col s12" id="ingredientList">
-                            <label>Mixing Bowl <small>(Add ingredients from pantry)</small></label>
-                            <table class="bordered">
-                                <thead>
-                                    <tr>
-                                        <th>Ingredient</th>
-                                        <th>Quantity</th>
-                                        <th>Unit</th>
-                                        <th>Remove Item</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="mixingBowlList"></tbody>
-                            </table>
-                        </div>
-                        <div class ="col s12">
-                            <label>Please Exclude <small>(separate with commas)</small></label>
-                            <input type="text" name="exclude" class="exclude">
-                        </div>
-                        <div class ="col s12" style="margin-top:20px;">INLINE STYLING================================
-                            <br>
-                            <label>Max Calories</label>
-                            <input type="number" name="calories" class="calories" value="2000">
-                        </div>
-                        <div class="browser-default col s6">
-                            <select class="dropdown-menu courseDropdown" aria-labelledby="form-unit">
-                                <option value="" disabled selected>Choose Type</option>
-                                <option value="main+course" class="type">Main Course</option>
-                                <option value="side+dish" class="type">Side Dish</option>
-                                <option value="dessert" class="type">Dessert</option>
-                                <option value="appetizer" class="type">Appetizer</option>
-                                <option value="salad" class="type">Salad</option>
-                            </select>
-                        </div>
-                        <div class="browser-default col s4">
-                            <select class="dropdown-menu dietDropdown" aria-labelledby="form-unit">
-                                <option value="" disabled selected>Choose Diet</option>
-                                <option value="pescetarian" class="diet">Pescetarian</option>
-                                <option value="lacto+vegetarian" class="diet">Lacto Vegetarian</option>
-                                <option value="ovo+vegetarian" class="diet">Ovo Vegetarian</option>
-                                <option value="vegan" class="diet">Vegan</option>
-                                <option value="paleo" class="diet">Paleo</option>
-                            </select>
-                        </div>
-                    </form>
-                </div>
-                <div class="col s12">
-                    <div class="card-action">
-                        <a href="#" id="select">Search for Recipes</a>
-                    </div>
-                </div>
-                <div style="clear:both"></div>
-            </div>
-        </div> -->
-    </div>
-    <div class="row">
-        <div>
-            <ul class="pagination center">
-                <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-                <li class="active"><a href="#!">1</a></li>
-                <li class="waves-effect"><a href="#!">2</a></li>
-                <li class="waves-effect"><a href="#!">3</a></li>
-                <li class="waves-effect"><a href="#!">4</a></li>
-                <li class="waves-effect"><a href="#!">5</a></li>
-                <li class="disabled"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
-              </ul>
-        </div>
-        <div id="recipe-cards">
-        </div>
-        <div>
-            <!-- Amazon Modal Structure
-            <div class="modal" id="amazon-modal">
-                <div class="modal-content">
-                    <h4>Modal Header</h4>
-                    <p>A bunch of text</p>
-                </div>
-                <div class="modal-footer">
-                    <a class="modal-action modal-close waves-effect waves-green btn-flat" href="#!">Agree</a>
-                </div> -->
-            </div><!-- Walmart Modal Structure -->
-            <div class="modal" id="walmart-modal">
-                <div class="modal-header right-align">
-                    <a class="modal-action modal-close waves-effect waves-green btn-flat" href="#!">Close</a>
-                </div>
-                <div class="row">
-                    <div class="modal-content walmart-content"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-    </main>
-    <footer class="page-footer">
-        <div class="container">
+<body class="signIn">
+    <div class="container">
+      <div class="row">
+          <div class="col s8  offset-s2 title">
+            <h1 id="heading">Feed-Yo-Face</h1>
+            <h4 id="subHeading">A Sweet Food Baby App</h4>
             <div class="row">
-                <div class="col s12">
-                    <h5 class="white-text">Random Food Joke</h5>
-                    <p class="grey-text text-lighten-4" id="joke"></p>
-                </div>
+              <div class="input-field col s12 l6 offset-l3">
+                <input id="email" type="email" class="validate">
+                <label for="email">Email</label>
+              </div>
             </div>
-        </div>
-        <div class="footer-copyright">
-            <div class="container">
-                © 2017 T34m RaWr SqU4d
+            <div class="row">
+              <div class="input-field col s12 l6 offset-l3">
+                <input id="password" type="password" class="validate">
+                <label for="password">Password</label>
+              </div>
             </div>
-        </div>
-    </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
-    </script> 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js">
-    </script> 
-    <script src="assets/javascript/app.js" type="text/javascript">
-    </script> 
-    <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js">
-    </script>
+            <div class="row">
+              <div class="col s12 l6 offset-l3" id="error">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col s6 l4 offset-l2">
+                <a class="waves-effect waves-light btn blue-grey darken-1" id="logIn"><i class="material-icons left">computer</i>Log-In</a>
+              </div>
+              <div class="col s6 l4">
+                <a class="waves-effect waves-light btn blue-grey darken-1" id="signUp"><i class="material-icons right">create</i>Sign-Up</a>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
 </body>
+
 </html>
